# ECTAIME

./: .gitignore  README.md  WORKLOG.md
benchmarks/: README.md  benchmark-manifest.v1.yaml  selection-rubric.md
contracts/: README.md  config.template.yaml  dpdoc_calibration_f6_user.json  gates.v1.yaml  input-contract.md  metrics.schema.json  mixct_directives.example.txt  mixct_markers.example.yaml  mixct_session_map.template.yaml  mixct_session_map.waghalter.yaml  note-audit.template.csv  output-contract.md  profile-timeline.template.csv  run-manifest.schema.json  waghalter_score_anchors.yaml
core/: README.md  ect_core_cli.py  (+3 more)
mixct_rust/: Cargo.toml
mixct_rust/mixct_app/: Cargo.toml
mixct_rust/mixct_app/src/: hotkey_bridge.rs  ltc_ctl.rs  main.rs  mcu_feedback.rs  midi_backend.rs  timeline_service.rs  transport_ctl.rs  transport_ltc_ctl.rs
mixct_rust/mixct_audio/: Cargo.toml
mixct_rust/mixct_audio/src/: lib.rs
mixct_rust/mixct_audit/: Cargo.toml
mixct_rust/mixct_audit/src/: lib.rs
mixct_rust/mixct_control/: Cargo.toml
mixct_rust/mixct_control/src/: lib.rs
mixct_rust/mixct_core/: Cargo.toml
mixct_rust/mixct_core/src/: lib.rs  risk.rs  safety.rs  state_machine.rs  tempo.rs  types.rs
mixct_rust/mixct_intent/: Cargo.toml
mixct_rust/mixct_intent/src/: lib.rs
mixct_rust/mixct_restore/: Cargo.toml
mixct_rust/mixct_restore/src/: lib.rs
mixct_rust/mixct_sync/: Cargo.toml
mixct_rust/mixct_sync/src/: lib.rs
mixct_rust/scripts/: mixct_session_start.sh
mixct_rust/speech_apple_bridge/: Cargo.toml
mixct_rust/speech_apple_bridge/src/: lib.rs
mixct_rust/speech_fallback_local/: Cargo.toml
mixct_rust/speech_fallback_local/src/: lib.rs
mixct_rust/voice_tts_apple_bridge/: Cargo.toml
mixct_rust/voice_tts_apple_bridge/src/: lib.rs
(+63 files in other folders)
