[workspace]
members = [
  "mixct_core",
  "mixct_sync",
  "mixct_audio",
  "mixct_control",
  "mixct_intent",
  "mixct_restore",
  "mixct_audit",
  "speech_apple_bridge",
  "voice_tts_apple_bridge",
  "speech_fallback_local",
  "mixct_app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Symphonova"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
